--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,29 +1,29 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.oss.licenses.plugin'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     defaultConfig {
         applicationId "org.peercast.pecaplay"
-        minSdkVersion 23
-        //targetSdkVersion 25
-
-        versionCode 50001
-        versionName '5.0.1'
+        minSdkVersion 21
+        targetSdkVersion 28
+        versionCode 60000
+        versionName '6.0.0'
         buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
-                // app/schemas/${databaseクラスのFQDN}/$schemaVersion.json が生成されるようになる
+                arguments += ["room.schemaLocation":"$projectDir/schemas".toString()]
             }
         }
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
 
+    androidExtensions {
+        experimental = true
     }
 
     dataBinding {
@@ -33,83 +33,83 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            useProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            minifyEnabled true
-            useProguard true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    androidExtensions {
-        experimental = true
+
+    kapt {
+        javacOptions{
+            // Increase the max count of errors from annotation processors.
+            // Default is 100.
+            option("-Xmaxerrs", 500)
+        }
     }
-//    testOptions {
-//        unitTests.returnDefaultValues = true
-//    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'androidx.core:core-ktx:1.1.0-alpha04'
+    implementation 'androidx.preference:preference:1.0.0'
+    annotationProcessor 'androidx.databinding:databinding-compiler:3.3.2'
     //implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx.reflect.lite:1.0.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 
-    //https://maven.google.com
-    ext.appcompat_version = '26.1.0'
-    implementation "com.android.support:support-compat:$appcompat_version"
-    implementation "com.android.support:appcompat-v7:$appcompat_version"
-    //implementation "com.android.support:preference-v14:$appcompat_version"
-    implementation "com.android.support:design:$appcompat_version"
-    implementation "com.android.support:cardview-v7:$appcompat_version"
+    def room_version = "2.1.0-alpha04"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-coroutines:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
-    // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    // alternatively, just ViewModel
-    implementation "android.arch.lifecycle:viewmodel:1.1.1"
-    // alternatively, just LiveData
-    implementation "android.arch.lifecycle:livedata:1.1.1"
-    //annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-    kapt "android.arch.lifecycle:compiler:1.1.1"
+    def lifecycle_version = "2.1.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-    implementation 'org.greenrobot:eventbus:3.1.1'
+    def work_version = "2.0.0"
+    implementation "androidx.work:work-runtime:$work_version"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
 
-    // Room (use 1.1.0-alpha1 for latest alpha)
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    //annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.annotation:annotation:1.0.2'
 
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    //implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation ('com.squareup.retrofit2:converter-simplexml:2.3.0') {
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation('com.squareup.retrofit2:converter-simplexml:2.3.0') {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
 
-    //implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
-    //implementation "com.squareup.moshi:moshi-kotlin:1.6.0"
+    //implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'com.squareup.moshi:moshi:1.6.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.6.0'
-    //implementation 'se.ansman.kotshi:api:1.0.2'
-    //kapt 'se.ansman.kotshi:compiler:1.0.2'
-
-//    ext.dagger_version='2.14.1'
-//    implementation "com.google.dagger:dagger-android:$dagger_version"
-//    implementation "com.google.dagger:dagger-android-support:$dagger_version" // if you use the support libraries
-//    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
-
-    //implementation 'com.squareup.moshi:moshi-kotlin:1.5.+'
-
-    //kapt "com.android.databinding:compiler:4.0"
-
     implementation 'com.jakewharton.timber:timber:4.7.0'
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-}
+    def koin_version = '2.0.0-beta-1'
+    implementation "org.koin:koin-core:$koin_version"
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
+    implementation 'org.unbescape:unbescape:1.1.6.RELEASE'
+    implementation 'com.google.android.gms:play-services-oss-licenses:16.0.2'
+
+    testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    testImplementation 'junit:junit:4.12'
+    testImplementation "android.arch.core:core-testing:$lifecycle_version"
+    androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
+}
