--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,129 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.peercast.pecaplay">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="org.peercast.pecaplay">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!--
-        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-        <uses-permission android:name="android.permission.WAKE_LOCK" />
-        <uses-permission android:name="android.permission.VIBRATE" />
-    -->
-
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
-    <uses-feature
-        android:name="android.hardware.touchscreen"
-        android:required="false" />
-
-    <supports-screens
-        android:largeScreens="true"
-        android:normalScreens="true"
-        android:smallScreens="false"
-        android:xlargeScreens="true" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".PecaPlayApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:supportsRtl="false"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".PecaPlayActivity"
+            android:name=".PecaPlayApplication"
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher"
+            android:supportsRtl="false"
             android:label="@string/app_name"
-            android:launchMode="singleTop"><!--singleTop-->
+            android:usesCleartextTraffic="true"
+            tools:ignore="GoogleAppIndexingWarning">
+        <activity
+                android:name=".PecaPlayActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme"
+                android:launchMode="standard">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
+                <action android:name="android.intent.action.SEARCH"/>
             </intent-filter>
 
             <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
+                    android:name="android.app.searchable"
+                    android:resource="@xml/searchable"/>
         </activity>
 
         <activity
-            android:name=".PlayerLauncherActivity"
-            android:label="PlayerLauncherActivity"
-            android:noHistory="true"
-            android:stateNotNeeded="true" />
-
-        <activity-alias
-            android:name=".PlayerLauncherActivity_MKV"
-            android:enabled="false"
-            android:label="PecaPlay MKV"
-            android:targetActivity=".PlayerLauncherActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.BROWSABLE" />
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:host="*"
-                    android:pathPattern="/stream/.*\\.mkv"
-                    android:scheme="http" />
-            </intent-filter>
-        </activity-alias>
-        <activity-alias
-            android:name=".PlayerLauncherActivity_FLV"
-            android:enabled="false"
-            android:label="PecaPlay FLV"
-            android:targetActivity=".PlayerLauncherActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.BROWSABLE" />
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:host="*"
-                    android:pathPattern="/stream/.*\\.flv"
-                    android:scheme="http" />
-            </intent-filter>
-        </activity-alias>
-        <activity-alias
-            android:name=".PlayerLauncherActivity_WMV"
-            android:enabled="false"
-            android:label="PecaPlay WMV"
-            android:targetActivity=".PlayerLauncherActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:host="*"
-                    android:pathPattern="/stream/.*\\.wmv"
-                    android:scheme="mmsh" />
-            </intent-filter>
-        </activity-alias>
-
+                android:name=".prefs.SettingsActivity"
+                android:theme="@style/AppSettingTheme"
+                android:label="@string/settings_activity"/>
 
         <activity
-            android:name=".prefs.SettingsActivity"
-            android:label="@string/settings_activity" />
+                android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
+                android:theme="@style/AppSettingTheme"
+                />
+        <activity
+                android:theme="@style/AppSettingTheme"
+                android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
+                />
 
         <provider
-            android:name=".SuggestionProvider"
-            android:authorities="org.peercast.pecaplay.SuggestionProvider"
-            android:exported="false" />
-
-        <service
-            android:name=".PecaPlayService"
-            android:enabled="true"
-            android:exported="false"
-            android:permission="android.permission.BIND_JOB_SERVICE" />
-
-        <service
-            android:name=".NotifierService"
-            android:enabled="true"
-            android:exported="false" />
-
+                android:name=".app.SuggestionProvider"
+                android:authorities="org.peercast.pecaplay.app.SuggestionProvider"
+                android:exported="false"/>
 
     </application>
 
