--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "org.peercast.pecaplay"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 60000
-        versionName '6.0.0'
+        versionCode 60002
+        versionName '6.0.2'
         buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
 
         javaCompileOptions {
@@ -58,7 +58,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
     implementation 'androidx.core:core-ktx:1.1.0-alpha04'
     implementation 'androidx.preference:preference:1.0.0'
     annotationProcessor 'androidx.databinding:databinding-compiler:3.3.2'
@@ -79,7 +79,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-    def work_version = "2.0.0"
+    def work_version = "2.0.1"
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
@@ -95,8 +95,8 @@ dependencies {
     }
 
     //implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-    implementation 'com.squareup.moshi:moshi:1.6.0'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.6.0'
+    implementation 'com.squareup.moshi:moshi:1.8.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
     implementation 'com.jakewharton.timber:timber:4.7.0'
 
     def koin_version = '2.0.0-beta-1'
@@ -106,6 +106,8 @@ dependencies {
 
     implementation 'org.unbescape:unbescape:1.1.6.RELEASE'
     implementation 'com.google.android.gms:play-services-oss-licenses:16.0.2'
+
+    implementation project(":libpeercast")
 
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testImplementation 'junit:junit:4.12'
