--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 android:name=".PecaPlayActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme"
-                android:launchMode="standard">
+                android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
