--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,55 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="org.peercast.pecaplay">
+        xmlns:tools="http://schemas.android.com/tools"
+        package="org.peercast.pecaplay">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
             android:name=".PecaPlayApplication"
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
-            android:supportsRtl="false"
             android:label="@string/app_name"
+            android:supportsRtl="false"
             android:usesCleartextTraffic="true"
             tools:ignore="GoogleAppIndexingWarning">
         <activity
                 android:name=".PecaPlayActivity"
                 android:label="@string/app_name"
-                android:theme="@style/AppTheme"
-                android:launchMode="singleTask">
+                android:theme="@style/AppTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
 
             <meta-data
                     android:name="android.app.searchable"
-                    android:resource="@xml/searchable"/>
+                    android:resource="@xml/searchable" />
         </activity>
+
+        <activity android:name=".ViewerLaunchActivity" android:label="@string/app_name"/>
+        <activity-alias
+                android:name=".PecaPlayViewer_WMV"
+                android:enabled="false"
+                android:targetActivity=".ViewerLaunchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                        android:host="localhost"
+                        android:pathPattern="/stream/.*\\.wmv"
+                        android:scheme="mmsh" />
+            </intent-filter>
+        </activity-alias>
+        <activity-alias
+                android:name=".PecaPlayViewer_FLV"
+                android:enabled="false"
+                android:targetActivity=".ViewerLaunchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                        android:host="localhost"
+                        android:pathPattern="/stream/.*\\.flv"
+                        android:scheme="http" />
+            </intent-filter>
+        </activity-alias>
+        <activity-alias
+                android:name=".PecaPlayViewer_MKV"
+                android:enabled="false"
+                android:targetActivity=".ViewerLaunchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                        android:host="localhost"
+                        android:pathPattern="/stream/.*\\.mkv"
+                        android:scheme="http" />
+            </intent-filter>
+        </activity-alias>
+
 
         <activity
                 android:name=".prefs.SettingsActivity"
-                android:theme="@style/AppSettingTheme"
-                android:label="@string/settings_activity"/>
+                android:label="@string/settings_activity"
+                android:theme="@style/AppSettingTheme" />
 
         <activity
                 android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
-                android:theme="@style/AppSettingTheme"
-                />
+                android:theme="@style/AppSettingTheme" />
         <activity
-                android:theme="@style/AppSettingTheme"
                 android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
-                />
+                android:theme="@style/AppSettingTheme" />
 
         <provider
                 android:name=".app.SuggestionProvider"
                 android:authorities="org.peercast.pecaplay.app.SuggestionProvider"
-                android:exported="false"/>
+                android:exported="false" />
 
     </application>
 
