--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
             android:label="@string/app_name"
             android:supportsRtl="false"
             android:usesCleartextTraffic="true"
+            android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
         <activity
                 android:name=".PecaPlayActivity"
                 android:label="@string/app_name"
-                android:theme="@style/AppTheme">
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -79,15 +80,12 @@
 
         <activity
                 android:name=".prefs.SettingsActivity"
-                android:label="@string/settings_activity"
-                android:theme="@style/AppSettingTheme" />
+                android:label="@string/settings_activity"/>
 
         <activity
-                android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
-                android:theme="@style/AppSettingTheme" />
+                android:name="com.google.android.gms.oss.licenses.OssLicensesActivity" />
         <activity
-                android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
-                android:theme="@style/AppSettingTheme" />
+                android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity" />
 
         <provider
                 android:name=".app.SuggestionProvider"
