--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "org.peercast.pecaplay"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 7_00_01_00
-        versionName '7.0.1-00'
+        versionCode 7_00_01_01
+        versionName '7.0.1-01'
         buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
 
         javaCompileOptions {
@@ -115,10 +115,10 @@ dependencies {
 
     implementation 'org.unbescape:unbescape:1.1.6.RELEASE'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
-
+    implementation 'com.google.android.play:core:1.7.2'
     implementation 'com.github.t-yoshi:peca-android:3.1.3-00'
 
-    implementation 'com.google.firebase:firebase-core:17.4.0'
+    implementation 'com.google.firebase:firebase-core:17.4.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
