--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:oss-licenses:0.9.2'
+        classpath 'com.android.tools.build:bundletool:0.9.0'
     }
 }
 
