--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,9 +103,9 @@ dependencies {
         exclude module: 'xpp3'
     }
 
-    implementation 'com.squareup.moshi:moshi:1.9.2'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
+    implementation 'com.squareup.moshi:moshi:1.12.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
 
     implementation 'com.jakewharton.timber:timber:4.7.0'
 
@@ -117,7 +117,7 @@ dependencies {
     implementation 'org.unbescape:unbescape:1.1.6.RELEASE'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
     implementation 'com.google.android.play:core:1.10.0'
-    implementation 'com.github.t-yoshi:peca-android:3.1.3-00'
+    implementation 'com.github.t-yoshi:peca-android:3.3.4'
 
     implementation 'com.google.firebase:firebase-crashlytics:17.4.1'
 
