--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -119,9 +121,9 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-crashlytics:18.0.0'
 
-    testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
     testImplementation 'junit:junit:4.12'
-    testImplementation "android.arch.core:core-testing:$lifecycle_version"
+    testImplementation "android.arch.core:core-testing:1.1.1"
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha05'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha05'
 }
