--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,17 +3,16 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'com.google.android.gms.oss-licenses-plugin'
-apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         applicationId "org.peercast.pecaplay"
         minSdkVersion 23
-        targetSdkVersion 29
-        versionCode 7_04_00_00
-        versionName '7.4.0-0'
+        targetSdkVersion 30
+        versionCode 7_04_01_00
+        versionName '7.4.1-0'
         buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
 
         javaCompileOptions {
@@ -71,9 +70,6 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-
-    kapt 'androidx.databinding:databinding-compiler:4.2.1'
-    //implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
 
@@ -107,13 +103,17 @@ dependencies {
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
 
+    def okhttp_version = "4.9.0"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     implementation "io.insert-koin:koin-android-ext:3.0.2"
 
     implementation 'org.unbescape:unbescape:1.1.6.RELEASE'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
-    implementation 'com.github.t-yoshi:peca-android:5782179074'
+    implementation 'com.github.t-yoshi:peca-android:65e2122632'
 
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     implementation 'com.google.firebase:firebase-crashlytics'
