--- a/core/build.gradle
+++ b/core/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 //    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
 //    api 'com.squareup.moshi:moshi-kotlin:1.12.0'
     api "com.squareup.okhttp3:okhttp:$okhttp_version"
-    //implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     api "com.jakewharton.timber:timber:$timber_version"
 
