--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ buildscript {
         target_sdk_version = 30
 
         kotlinx_coroutines_version = "1.5.0"
-        serialization_version = "1.2.1"
+        kotlinx_serialization_version = "1.2.1"
 
         libpeercast_version = "7b5372169b"
 
