--- a/pecaviewer/build.gradle
+++ b/pecaviewer/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'kotlinx-serialization'
 }
 
 android {
@@ -76,9 +77,9 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
-    implementation "com.squareup.moshi:moshi:1.12.0"
-    implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
+//    implementation "com.squareup.moshi:moshi:1.12.0"
+//    implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
+//    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
 
     implementation "com.github.t-yoshi:peca-android:$libpeercast_version"
 
