--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,9 @@ buildscript {
         kotlinx_coroutines_version = "1.5.0"
         kotlinx_serialization_version = "1.2.1"
 
-        libpeercast_version = "b2d3ba3bed"
+        libpeercast_version = "4.0.4"
 
-        androidx_version = "1.3.0"
+        androidx_version = "1.3.1"
         lifecycle_version = "2.3.1"
         koin_version = '3.0.2'
         okhttp_version = "4.9.0"
