--- a/core/build.gradle
+++ b/core/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 
     api "com.jakewharton.timber:timber:$timber_version"
 
-    api "com.github.t-yoshi:peca-android:$libpeercast_version"
+    api "com.github.t-yoshi:libpeercast-android:$libpeercast_version"
     api 'org.unbescape:unbescape:1.1.6.RELEASE'
 
 
