--- a/pecaviewer/build.gradle
+++ b/pecaviewer/build.gradle
@@ -81,7 +81,7 @@ dependencies {
 //    implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
 //    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
 
-    implementation "com.github.t-yoshi:peca-android:$libpeercast_version"
+    implementation "com.github.t-yoshi:libpeercast-android:$libpeercast_version"
 
     implementation 'org.unbescape:unbescape:1.1.6.RELEASE'
 
