--- a/pecaplay/build.gradle
+++ b/pecaplay/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'kotlinx-serialization'
     id 'com.google.android.gms.oss-licenses-plugin'
     id 'com.google.firebase.crashlytics'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -17,8 +18,8 @@ android {
         minSdkVersion min_sdk_version
         targetSdkVersion target_sdk_version
 
-        versionCode 8_00_00_00
-        versionName '8.0.0'
+        versionCode 8_00_00_01
+        versionName '8.0.0-1'
         buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
 
         javaCompileOptions {
@@ -130,4 +131,3 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
 
-apply plugin: 'com.google.gms.google-services'
