WAKE_LOCK権限を付加して起動の維持

--- a/pecaviewer/src/main/AndroidManifest.xml
+++ b/pecaviewer/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="org.peercast.pecaviewer">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application>
         <activity
