--- a/pecaplay/src/main/AndroidManifest.xml
+++ b/pecaplay/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         <activity
             android:name=".PecaPlayActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
