--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.7.20'
     repositories {
         google()
         mavenCentral()
@@ -20,21 +20,25 @@ buildscript {
     }
 
     ext {
-        build_tools_version = "30.0.3"
+        build_tools_version = "33.0.1"
         min_sdk_version = 23
-        target_sdk_version = 31
+        target_sdk_version = 33
 
-        kotlinx_coroutines_version = "1.6.0"
+        kotlinx_coroutines_version = "1.6.1"
         kotlinx_serialization_version = "1.2.1"
 
         libpeercast_version = "279492562a"
 
         androidx_version = "1.4.1"
-        lifecycle_version = "2.4.1"
-        koin_version = '3.0.2'
-        okhttp_version = "4.9.2"
-        work_version = "2.7.1"
-        glide_version = '4.11.0'
+        core_ktx_version = "1.9.0"
+        material_version = "1.8.0"
+        appcompat_version = "1.6.0"
+
+        lifecycle_version = "2.5.1"
+        koin_version = "3.3.2"
+        okhttp_version = "4.10.0"
+        work_version = "2.8.0-rc01"
+        glide_version = '4.14.2'
         timber_version = "5.0.1"
     }
 }
