--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.8.0'
+    ext.kotlin_version = '1.9.20'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath 'com.android.tools.build:gradle-api:7.4.1'
+        classpath 'com.android.tools.build:gradle:8.3.1'
+        classpath 'com.android.tools.build:gradle-api:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.15' //4.3.9 is NG
+        classpath 'com.google.gms:google-services:4.4.1'
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.android.gms:oss-licenses-plugin:0.10.6'
 
         classpath 'com.android.tools.build:bundletool:0.9.0'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
     }
 
     ext {
-        build_tools_version = "33.0.1"
+        build_tools_version = "34.0.0"
         min_sdk_version = 23
-        target_sdk_version = 33
+        target_sdk_version = 34
 
         kotlinx_coroutines_version = "1.6.1"
         kotlinx_serialization_version = "1.2.1"
@@ -31,15 +31,15 @@ buildscript {
         libpeercast_version = "279492562a"
 
         androidx_version = "1.4.1"
-        core_ktx_version = "1.10.0-alpha02"
-        material_version = "1.8.0"
+        core_ktx_version = "1.12.0"
+        material_version = "1.11.0"
         appcompat_version = "1.6.1"
 
-        lifecycle_version = "2.5.1"
+        lifecycle_version = "2.7.0"
         koin_version = "3.3.2"
         okhttp_version = "4.10.0"
-        work_version = "2.8.0"
-        glide_version = '4.14.2'
+        work_version = "2.9.0"
+        glide_version = '4.16.0'
         timber_version = "5.0.1"
     }
 }
