--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,9 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 
 #android.enableExperimentalFeatureDatabinding=true
 #android.databinding.enableV2 = false
