--- a/pecaviewer/src/main/AndroidManifest.xml
+++ b/pecaviewer/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.peercast.pecaviewer">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application>
@@ -20,6 +20,7 @@
 
         <service
             android:name="org.peercast.pecaviewer.service.PlayerService"
+            android:foregroundServiceType="mediaPlayback"
             android:exported="false" />
 
     </application>
