--- a/slidinguppanel/build.gradle
+++ b/slidinguppanel/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
 }
 
 android {
@@ -16,12 +16,13 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner" // For Instrumentation Unit testing
     }
 
-    lintOptions {
-        abortOnError false
-    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    namespace 'com.sothree.slidinguppanel.library'
+    lint {
+        abortOnError false
     }
 }
